--- a/zoo/index.html
+++ b/zoo/index.html
@@ -1,5 +1,9 @@
 <html>
     <body>
+        <button onclick="sprintA1Lab1()" >Sprint A1 Lab 1</button><br>
+        <button onclick="sprintA1Lab2()" >Sprint A1 Lab 2</button><br>
+        <input id="sprintA1Lab3Text" type="number" />
+        <button onclick="sprintA1Lab3()" >Sprint A1 Lab 3</button>
         <script src="index.js"></script>
     </body>
 </html>
