--- a/zoo/index.html
+++ b/zoo/index.html
@@ -3,7 +3,8 @@
         <button onclick="sprintA1Lab1()" >Sprint A1 Lab 1</button><br>
         <button onclick="sprintA1Lab2()" >Sprint A1 Lab 2</button><br>
         <input id="sprintA1Lab3Text" type="number" />
-        <button onclick="sprintA1Lab3()" >Sprint A1 Lab 3</button>
+        <button onclick="sprintA1Lab3()" >Sprint A1 Lab 3</button><br>
+        <button onclick="sprintA1Lab4()" >Sprint A1 Lab 4</button><br>
         <script src="index.js"></script>
     </body>
 </html>
