Corrections from rubric checking

--- a/zoo/index.html
+++ b/zoo/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>School Zoo Website</title>
+    </head>
     <body>
         <button onclick="sprintA1Lab1()" >Sprint A1 Lab 1</button><br>
         <button onclick="sprintA1Lab2()" >Sprint A1 Lab 2</button><br>
