--- a/zoo/index.html
+++ b/zoo/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>School Zoo Website</title>
@@ -9,10 +10,6 @@
         <button onclick="sprintA1Lab3()" >Sprint A1 Lab 3</button><br>
         <button onclick="sprintA1Lab4()" >Sprint A1 Lab 4</button><br>
         <button onclick="sprintA1Lab5()" >Sprint A1 Lab 5</button><br>
-        <p>Zoo Project</p><br>
-        <button onclick="createZoo()" >Create Zoo Object</button><br>
-        <button onclick="populateZoo()" >Populate Zoo Animals</button><br>
-        <button onclick="addToZooArray()" >Populate Zoo Array with Animals</button><br>
         <script src="index.js"></script>
     </body>
 </html>
