--- a/zoo/index.html
+++ b/zoo/index.html
@@ -10,6 +10,7 @@
         <button onclick="sprintA1Lab3()" >Sprint A1 Lab 3</button><br>
         <button onclick="sprintA1Lab4()" >Sprint A1 Lab 4</button><br>
         <button onclick="sprintA1Lab5()" >Sprint A1 Lab 5</button><br>
+        <button onclick="sprintA2Lab1()" >Sprint A2 Lab 1</button><br>
         <script src="index.js"></script>
     </body>
 </html>
