--- a/zoo/index.html
+++ b/zoo/index.html
@@ -11,6 +11,7 @@
         <button onclick="sprintA1Lab4()" >Sprint A1 Lab 4</button><br>
         <button onclick="sprintA1Lab5()" >Sprint A1 Lab 5</button><br>
         <button onclick="sprintA2Lab1()" >Sprint A2 Lab 1</button><br>
+        <button onclick="sprintA2Lab2()" >Sprint A2 Lab 2</button><br>
         <script src="index.js"></script>
     </body>
 </html>
