--- a/zoo/index.html
+++ b/zoo/index.html
@@ -12,6 +12,10 @@
         <button onclick="sprintA1Lab5()" >Sprint A1 Lab 5</button><br>
         <button onclick="sprintA2Lab1()" >Sprint A2 Lab 1</button><br>
         <button onclick="sprintA2Lab2()" >Sprint A2 Lab 2</button><br>
+        <button onclick="A2Lab3Enclosure()" >Sprint A2 Lab 3 Enclosure</button>
+        <button onclick="A2Lab3Date()" >Sprint A2 Lab 3 Date</button>
+        <button onclick="A2Lab3String()" >Sprint A2 Lab 3 String</button>
+        <button onclick="A2Lab3EvenOdd()" >Sprint A2 Lab 3 Even or Odd</button>
         <script src="index.js"></script>
     </body>
 </html>
