Code quality changes

--- a/zoo/index.html
+++ b/zoo/index.html
@@ -15,7 +15,7 @@
         <button onclick="A2Lab3Enclosure()" >Sprint A2 Lab 3 Enclosure</button>
         <button onclick="A2Lab3Date()" >Sprint A2 Lab 3 Date</button>
         <button onclick="A2Lab3String()" >Sprint A2 Lab 3 String</button>
-        <button onclick="A2Lab3EvenOdd()" >Sprint A2 Lab 3 Even or Odd</button>
+        <button onclick="A2Lab3EvenOdd()" >Sprint A2 Lab 3 Even or Odd</button><br>
         <script src="index.js"></script>
     </body>
 </html>
