--- a/zoo/a2zoo/index.html
+++ b/zoo/a2zoo/index.html
@@ -13,6 +13,8 @@
             <p>Zoo NumberOfGuests: <span id="zooGuests">unknown</span></p>
         </div>
 
+        <div id="zooAnimalContainer"></div>
+
         <button onclick="createZoo()" >Create Zoo Object</button><br>
         <button onclick="populateZoo()" >Populate Zoo Animals</button><br>
         <script src="js/index.js"></script>
