--- a/zoo/index.html
+++ b/zoo/index.html
@@ -16,6 +16,10 @@
         <button onclick="A2Lab3Date()" >Sprint A2 Lab 3 Date</button>
         <button onclick="A2Lab3String()" >Sprint A2 Lab 3 String</button>
         <button onclick="A2Lab3EvenOdd()" >Sprint A2 Lab 3 Even or Odd</button><br>
+        <div id="a3lab1Animal">
+            <p id="a3lab1AnimalName">Unknown</p>
+        </div>
+        <button onclick="A3Lab1Animal()" >Sprint A3 Lab 1 Animal</button><br>
         <script src="index.js"></script>
     </body>
 </html>
