--- a/zoo/index.html
+++ b/zoo/index.html
@@ -20,6 +20,13 @@
             <p id="a3lab1AnimalName">Unknown</p>
         </div>
         <button onclick="A3Lab1Animal()" >Sprint A3 Lab 1 Animal</button><br>
+        <p>A3 Lab 2</p>
+        <div id="animalList">
+
+        </div>
+        <input id="newAnimalName" type="text" />
+        <button onclick="addAnimal()">Add Animal</button><br>
         <script src="index.js"></script>
+        <script src="a3lab.js"></script>
     </body>
 </html>
