--- a/zoo/a2zoo/index.html
+++ b/zoo/a2zoo/index.html
@@ -15,6 +15,17 @@
 
         <div id="zooAnimalContainer"></div>
 
+        <table id="zooAnimalTable">
+            <tr>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Age</th>
+                <th>Gender</th>
+                <th>Weight</th>
+                <th>Pregnancy</th>
+            </tr>
+        </table>
+
         <button onclick="createZoo()" >Create Zoo Object</button><br>
         <button onclick="populateZoo()" >Populate Zoo Animals</button><br>
         <script src="js/index.js"></script>
