Add form validation

--- a/zoo/a2zoo/index.html
+++ b/zoo/a2zoo/index.html
@@ -40,6 +40,7 @@
             <br>
             <input type="submit" alt="Submit" id="submit" name="submit">
         </form>
+        <p id="formError"></p>
         <p id="formThankYou" style="display: none;">
         Thank you for submitting!
         </p>
