--- a/zoo/index.html
+++ b/zoo/index.html
@@ -35,6 +35,22 @@
             <area id="aridRegion" shape="rect" coords="250,450,420,550" href="#" alt="Arid Region">
         </map>
         <br>
+        <p>
+        A4 Lab 2 Ticket Booking
+        </p>
+        <form id="a4Form" name="a4Form" method="post" action="#">
+            <label for="userName">Name</label>
+            <input id="userName" name="userName" placeholder="Name" type="text">
+
+            <label for="days">Days of Attendance</label>
+            <input id="days" name="days" placeholder="1" type="number">
+            <br>
+            <input type="submit" alt="Submit" id="submit" name="submit">
+        </form>
+        <p id="formError"></p>
+        <p id="formThankYou" style="display: none;">
+        Thank you for submitting!
+        </p>
         <script src="index.js"></script>
         <script src="a3lab.js"></script>
     </body>
