--- a/zoo/index.html
+++ b/zoo/index.html
@@ -51,6 +51,23 @@
         <p id="formThankYou" style="display: none;">
         Thank you for submitting!
         </p>
+
+        <p>
+        A4 Lab 3 Review System
+        </p>
+        <form id="a4ReviewForm" name="a4ReviewForm" method="dialog">
+            <label for="reviewUserName">Name</label>
+            <input id="reviewUserName" name="reviewUserName" placeholder="Name" type="text">
+
+            <label for="reviewContent">Review</label>
+            <input id="reviewContent" name="reviewContent" placeholder="Your review..." type="text">
+            <br>
+            <input type="submit" alt="Submit" id="reviewSubmit" name="reviewSubmit">
+        </form>
+        <p id="reviewFormError"></p>
+        <p id="reviewFormThankYou" style="display: none;">
+        Thank you for submitting!
+        </p>
         <script src="index.js"></script>
         <script src="a3lab.js"></script>
     </body>
